<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_baseline_quiz_24"
            android:title="@string/menu_category" />

        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_baseline_leaderboard_24"
            android:title="@string/menu_leaderboard" />

        <item android:id="@+id/nav_about"
            android:icon="@drawable/icon_about"
            android:title="@string/menu_about">
        </item>


    </group>
</menu>