<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.quizleaderboardswimup.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.quizleaderboardswimup.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.quizleaderboardswimup.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="com.example.quizleaderboardswimup.ui.leaderboard.LeaderboardFragment"
        android:label="@string/menu_leaderboard"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.quizleaderboardswimup.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>